<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">Fireplace Market +</string>
    <string-array name="Category">
        <item>All</item>
        <item>Applications</item>
        <item>Network Tools</item>
        <item>Root Utilities</item>
        <item>System Tools</item>
        <item>Security</item>
        <item>Tweaks</item>
        <item>Themes</item>
    </string-array>
    <string name="up_one_level">..</string>
    <string name="current_dir">.</string>
    <string name="version">2.3.1</string>
    <string name="updateTo">2.3.1</string>
    <string name="info_changelog">
        Fireplace Market 2.3.1
        \n- Speed Improvement
        \n- Bug Fixes</string>
    <string name="app_icon">Application Icon</string>
    <string name="category_label">Category: </string>
    <string name="developer_label">Developer</string>
    <string name="download_label">Download</string>
    <string name="prev_activity_label">Info from prev activity</string>
    <string name="info_label">INFORMATION</string>
    <string name="app_title_label">App Title</string>
    <string name="changelog_ok_button">Okay</string>
    <string name="changelog_full_title">Changelog</string>
    <string name="changelog_title">Whats New!</string>
    <string name="share_label">Share</string>
    <string name="btnSearchLabel">Search</string>
    <string name="strSetUpComp">Setting up components</string>
    <string name="etSearchHint">What are you looking for?</string>
    <string-array name="ViewTitles">
        <item>Installed</item>
        <item>Featured</item>
        <item>Category</item>
    </string-array>
    <string name="empty_list_placeholder">No data</string>
    <string name="device_info_text">Model - OS</string>
    <string name="twit_button_text">Twitter</string>
    <string name="facebook_button_text">Facebook</string>
    <string name="under_dev_text">Under development</string>
    <string name="view_all_button_text">All Applications</string>
    <string name="repo_button_text">Repository</string>
    <string name="packages_button_text">Packages</string>
    <string name="storage_button_text">Storage</string>
    <string name="pkgs_textview_two">TextView Two</string>
    <string name="pkgs_textview_one">TextView One</string>
    <string name="pkgs_button_one">Button One</string>
    <string name="repo_add_button_text">Add</string>
    <string name="repo_name_hint">Repo Name</string>
    <string name="google_icon">Google Icon</string>
    <string name="twitter_icon">Twitter Icon</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="storage_text">Storage: </string>
    <string name="storage_android_text">Android: </string>
    <string name="storage_device_text">Device: </string>
    <string name="storage_model_text">Model: </string>
    <string name="storage_large_text">Large Text</string>
    <string name="storage_fp_market">Fireplace Market: </string>
    <string name="storage_full_cl">Full Changelog</string>
    <string name="allow">Thanks for donating to the Rooted Dev Team</string>
    <string name="dont_allow">You must download the donate version from the Android Market.</string>
    <string name="checking_license">Checking License&#8230;</string>
    <string name="quit_button">Quit</string>
    <string name="buy_button">Donate</string>
    <string name="unlicensed_dialog_title">Warning</string>
    <string name="unlicensed_dialog_body">Your copy of this application is not licensed.</string>
    <string name="check_license">License Check</string>
    <string name="featured_app_promo_desc">Featured Application Tile</string>
    <string name="menu_donate_button_text">Donate</string>
    <string name="menu_about_button_text">About</string>
    <string name="menu_update_button_text">Update</string>
    <string name="menu_repo_button_text">Repo</string>
    <string name="SettingsLabel">Settings</string>
    <string name="repo_pref_title">Repositories</string>
    <string name="repo_pref_summary">Click to add a repo.</string>
    <string name="update_pref_title">Update</string>
    <string name="update_pref_summary">Check for update.</string>
    <string name="cache_pref_title">Clear Cache</string>
    <string name="cache_pref_summary">Delete contents of download directory.</string>
    <string name="donate_pref_title">Donate</string>
    <string name="donate_pref_summary">Click to Donate.</string>
    <string name="about_pref_title">About</string>
    <string name="about_pref_summary">A little information about us.</string>
    <string name="sync_pref_title">Refresh Apps</string>
    <string name="sync_pref_summary">Click to refresh the app lists.</string>
</resources>
