<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="Action Settings">
		<Preference
			android:title="@string/repo_pref_title"
			android:summary="@string/repo_pref_summary"
		    android:key="repoPref"/>
		<Preference
			android:title="@string/update_pref_title"
			android:summary="@string/update_pref_summary"
		    android:key="updatePref"/>
		<Preference
			android:title="@string/cache_pref_title"
			android:summary="@string/cache_pref_summary"
		    android:key="cachePref"/>
	</PreferenceCategory>
	<PreferenceCategory android:title="Info Settings">
	    <Preference
			android:title="@string/donate_pref_title"
			android:summary="@string/donate_pref_summary"
		    android:key="donatePref"/>
		<Preference
			android:title="@string/about_pref_title"
			android:summary="@string/about_pref_summary"
		    android:key="aboutPref"/>
	</PreferenceCategory>
</PreferenceScreen>